[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dynfmt2 = { version = "0.2.0", features = ["curly"] }
glib = "0.20.9"
indexmap = { version = "2.9.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
waybar-cffi = "0.1.0"
