[package]
name = "launcher"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
dynfmt2 = { version = "0.2.0", features = ["curly"] }
glib = "0.20.9"
ordermap = { version = "0.5.7", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
waybar-cffi = "0.1.0"
